--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_install:
   - gcloud config set compute/zone asia-southeast1-a
   - gcloud container clusters get-credentials k8sgen
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+script:
+  - docker run pavittwk/nodejs -- --coverage
 deploy:
   provider: scirpt
   scirpt: bash ./deploy.sh
