--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - gcloud container clusters get-credentials k8sgen
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 script:
-  - docker run pavittwk/nodejs -- --coverage
+  - docker run pavittwk/nodejs
 deploy:
   provider: scirpt
   scirpt: bash ./deploy.sh
