--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - gcloud container clusters get-credentials k8sgen
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 deploy:
-  provider: scirpt
+  provider: script
   scirpt: bash ./deploy.sh
   on:
     branch: master
