--- a/config/ingress.yaml
+++ b/config/ingress.yaml
@@ -23,3 +23,10 @@ spec:
             backend:
               serviceName: mongoexpress
               servicePort: 8081
+   - host: db.tedxchulalongkornu.net
+      http:
+        paths:
+          - path: /
+            backend:
+              serviceName: mongoexpress
+              servicePort: 8081
